<resources>
    <string name="app_name">SDC</string>
    <string name="loading">Loading…</string>
    <string name="todo">TODO</string>
    <string name="title1">THE BEST OF SDC GLOBAL CINEMA</string>
    <string name="title2">View the best of SDC Global Cinema Movies</string>
    <string name="title3">WATCH YOUR FAVORITE MOVIES</string>
    <string name="title4">Any Gadgets, Any where, Any Time</string>
    <string name="title5">PERSONALIZED FOR YOU</string>
    <string name="title6">Watch your favourite movie releases\ncomfortably at your place</string>
    <string name="skip">Skip</string>
    <string name="skip_done">Done</string>
    <string name="watch_unlimited_movies_series_anywhere_anytime">Watch unlimited movies, series,\nanywhere, anytime</string>
    <string name="login_signup_btn">LOGIN / SIGNUP</string>
    <string name="explore_as_guest">EXPLORE AS GUEST</string>
    <string name="sign_in">Sign-In</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="enter_num_mail">Enter your email address or mobile number</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="don_t_have_a_account_signup">Don’t have a account?</string>
    <string name="signup">Signup</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="_8220907160">8220907160</string>
    <string name="change"><u>Change</u></string>
    <string name="we_have_sent_you_an_otp_to_your_registered_mobile_number">We have sent you an OTP to your registered\nmobile number.</string>
    <string name="we_have_sent_you_an_otp_to_your_registered_emailId">We have sent you an OTP to your registered\nMail Id.</string>
    <string name="_0">0</string>
    <string name="_01_00">01:00</string>
    <string name="sec">Sec</string>
    <string name="verify">VERIFY</string>
    <string name="country_code">Country Code</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="sign_up">Sign-Up</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="sign_in_already"><u>Sign-In</u></string>
    <string name="btn2_continue">CONTINUE</string>
    <string name="language">Language</string>
    <string name="select_your_preferred_languages">Select your preferred languages</string>
    <string name="language_continue">CONTINUE</string>
    <string name="english">English</string>
    <string name="bot_nav_home">Home</string>
    <string name="bot_nav_search">Search</string>
    <string name="bot_nav_watchList">Watchlist</string>
    <string name="bot_nav_profile">Profile</string>
    <string name="facebook_app_id">972030926811861</string>
    <string name="fb_login_protocol_scheme">fb972030926811861</string>
    <string name="facebook_client_token">56789</string>
    <string name="large_text">



        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_home">Location</string>
    <string name="chennai_india_home">Chennai, India</string>
    <string name="banner_movie_name">…</string>
    <string name="tamil_drama_action_02_30_hrs">Tamil | Drama | Action | 02:30 hrs</string>
    <string name="home_page_share_now">SHARE NOW</string>
    <string name="home_page_watchlist">WATCHLIST</string>
    <string name="new_releases">New Releases</string>
    <string name="see_all"><u>See all</u></string>
    <string name="thriller_movies">Thriller Movies</string>
    <string name="action_movies">Action Movies</string>
    <string name="page_under_construction">Page Under Construction</string>
    <string name="profile">Profile</string>
    <string name="payment_history">Payment History</string>
    <string name="gifted_history">Gifted History</string>
    <string name="preferred_language">Preferred Language</string>
    <string name="rrr">RRR</string>
    <string name="tamil_drama_02_30_hrs">Tamil | Drama | 02:30 hrs</string>
    <string name="payment">Payment :</string>
    <string name="purchased_date">Purchased Date :</string>
    <string name="_199_1day">₹ 199/1day</string>
    <string name="_25_apr_2022">25 Apr 2022</string>
    <string name="rent_again">RENT AGAIN</string>
    <string name="rent_now">RENT NOW</string>
    <string name="description_movie_name">Movie</string>
    <string name="description_page_movie_description">Tamil | Drama | 02:30 hrs</string>
    <string name="play_trailer">PLAY TRAILER</string>
    <string name="starring">Starring :</string>
    <string name="sivakarthikeyan_priyanka_arulmohan_s_j_suryah">Sivakarthikeyan • Priyanka Arulmohan • S.J. Suryah</string>
    <string name="movie_contet_descrip">Don is a 2022 Indian Tamil-language coming-of-age romantic comedy-drama film written and directed by Cibi Chakaravarthi in his directorial debut, and produced by Allirajah Subaskaran of Lyca Productions.</string>
    <string name="_199">00</string>
    <string name="_24hrs_1_time_watch">24hrs / 1 Time watch</string>
    <string name="rent_now_description_page">RENT NOW</string>
    <string name="gift_now">GIFT NOW</string>
    <string name="share_now">SHARE NOW</string>
    <string name="watchlist">WATCHLIST</string>
    <string name="ready_set_party">Ready | Set | Party</string>
    <string name="order_now">ORDER NOW</string>
    <string name="suggested_movies_for_you">Suggested Movies For You</string>
    <string name="help_and_support">Help and Support</string>
    <string name="get_24_7_support_with_sdc_cinemas">Get 24*7 support with SDC Cinemas</string>
    <string name="description">Need assistance ? \nDo not hesitate to Mail Us or Call us</string>
    <string name="mail_us">MAIL US</string>
    <string name="or_give_us_a_call_on">or give us a call on</string>
    <string name="_91_8846_7463_76">+91 - 8846 7463 76</string>
    <string name="rate_movie">RATE MOVIE</string>
    <string name="redeemed_by">Redeemed by :</string>
    <string name="gift_id">Gift ID :</string>
    <string name="dot">...</string>
</resources>