<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_signup_page_bg"
    tools:context=".LoginSignPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784">

        <ImageView
            android:layout_width="175.56sp"
            android:layout_height="134.32sp"
            android:layout_gravity="center"
            android:src="@drawable/sdc_logo"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="5sp"
            android:text="@string/watch_unlimited_movies_series_anywhere_anytime"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_signup_btn"
            android:layout_width="328dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_gradient"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="5sp"
            android:text="@string/login_signup_btn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />
<!--android:background="@drawable/btn_guest_bg"-->
        <Button
            android:id="@+id/guest_btn"
            android:layout_width="328dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="5sp"
            android:background="@drawable/btn_guest_bg"
            android:text="@string/explore_as_guest"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>