<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/black"
    app:cardCornerRadius="15dp"
    android:layout_margin="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/payment_history_movieList_img"
            android:layout_width="130dp"
            android:layout_height="171dp"
            android:src="@drawable/beast"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/payment_history_movie_title"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="144dp"
            android:text="@string/rrr"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.105" />

        <TextView
            android:id="@+id/movie_description_tv"
            android:layout_width="210dp"
            android:layout_height="20dp"
            android:layout_marginTop="3dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:text="@string/tamil_drama_02_30_hrs"
            android:textColor="@color/enter_num_txt_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/payment_history_movie_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/payment_history_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/payment_history_movie_title" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/payment"
            android:textColor="@color/enter_num_txt_color"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/movie_description_tv"
            app:layout_constraintTop_toBottomOf="@+id/movie_description_tv" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="13dp"
            android:text="@string/purchased_date"
            android:textColor="@color/enter_num_txt_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/movie_description_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/movie_description_tv" />

        <TextView
            android:id="@+id/movie_cost_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_199_1day"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@+id/textView13"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/movie_purchase_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_25_apr_2022"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@+id/textView14"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/rentAgainBtn"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/watch_party_bg"
            android:text="@string/rent_again"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/payment_history_movieList_img"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/rateMovieBtn"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/watch_party_bg"
            android:text="@string/rate_movie"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rentAgainBtn"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>